2019_07_DevOpsDay_Dataart/istio/istio.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$request_uri"
    nginx.ingress.kubernetes.io/auth-response-headers: "x-auth-request-user, x-auth-request-email, authorization"
  name: external-auth-oauth2-istio
  namespace: istio-system
spec:
  rules:
  - host: istio-secure.<your.cluster.domain>
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway 
          servicePort: 80
        path: /
  tls:
  - hosts:
    - istio-secure.<your.cluster.domain>
    secretName: tls

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy-istio
  namespace: default
spec:
  rules:
  - host: istio-secure.<your.cluster.domain>
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - istio-secure.<your.cluster.domain>
    secretName: tls
