2019_07_DevOpsDay_Dataart/istio/istio_wo_jwt.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-wo-jwt
  namespace: istio-system
spec:
  rules:
  - host: istio.<your.cluster.domain>
    http:
      paths:
      - backend:
          serviceName: istio-ingressgateway 
          servicePort: 80
        path: /
  tls:
  - hosts:
    - istio.<your.cluster.domain>
    secretName: tls
